# cutty

./: CMakeLists.txt  LICENSE.md  README.md
Resources/images/: cutty.icns
Resources/settings/: input.map
Resources/shaders/: flat.fsh
app/: app.cc  app.h  capture.cc  cellgrid.cc  cellgrid.h  colors.cc  colors.h  cuterm.h  main.cc  process.cc  process.h  render.cc  render.h  teletype.cc  teletype.h  terminal.cc  terminal.h  timestamp.cc  timestamp.h  translate.cc  translate.h  typeface.cc  typeface.h  ui9.h
cmake/modules/: MacOSXBundleInfo.plist.in
lib/: canvas.cc  canvas.h  color.h  draw.h  font.cc  font.h  format.h  glyph.cc  glyph.h  logger.h  utf8.cc  utf8.h
scripts/: dump-stats.sh  keymap.py  macos-icon.sh  readbox.py  runtests.py
shaders/: default.properties
tests/: capture.h  t-ascii-table.cc  t-cc-pad-cr-1.cc  t-cc-pad-cr-1.sbox  t-cc-pad-lf-1.cc  t-cc-pad-lf-1.sbox  t-csi-delete-lines-1.cc  t-csi-delete-lines-2.cc  t-csi-delete-lines-3.cc  t-csi-erase-lines-1.cc  t-csi-erase-lines-1.sbox  t-csi-erase-lines-2.cc  t-csi-erase-lines-2.sbox  t-csi-erase-lines-3.cc  t-csi-erase-lines-3.sbox  t-csi-erase-lines-4.cc  t-csi-erase-lines-4.sbox  t-csi-erase-lines-5.cc  t-csi-erase-lines-5.sbox  t-csi-goto-abs-1.cc  t-csi-goto-abs-1.sbox  t-csi-goto-abs-2.cc  t-csi-goto-abs-2.sbox  t-csi-goto-abs-3.cc  t-csi-goto-abs-3.sbox  t-csi-insert-lines-1.cc  t-csi-insert-lines-1.sbox  t-csi-insert-lines-2.cc  t-csi-insert-lines-2.sbox  t-csi-scroll-region-1.sbox  t-csi-scroll-region-2.cc  t-csi-scroll-region-2.sbox  t-csi-scroll-region-3.cc  t-csi-scroll-region-3.sbox  t-style-grid.cc  t1.cc  t4.sbox  t5.sbox  t6.cc  t6.sbox  (+2 more)
util/: capture.cc  genatlas.cc
